fix: Line number cells show unintentional spacing in windows 10

--- a/src/main/resources/style/text-dark.css
+++ b/src/main/resources/style/text-dark.css
@@ -19,6 +19,7 @@
 .lineno {
 	-fx-background-color: rgb(29, 29, 31);
 	-fx-fill: rgb(198, 217, 225);
+	-fx-background-insets: -2;
 }
 .caret {
 	-fx-stroke: white;
